fix: scroll-down icon position on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -436,8 +436,14 @@ text-rendering: optimizeLegibility;
 }
 
 .scroll-down{
-  margin-top: 210px;
+  margin-top: 190px;
   overflow-x: hidden;
+}
+
+@media (min-width: 750px) {
+.scroll-down{
+  margin-top: 210px;
+}
 }
 
 .scroll-down i{
